Remove `display: grid` to fix spacing

--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -396,7 +396,6 @@
     border: 1px solid #dad7fb;
     margin: 3px;
     padding: 2.5px;
-    display: grid;
     width: 49%;
 }
 
